deploy: 2c43c1e8aec4f3e48ea7dcaed12295cb7ba2538f

--- a/2017.html
+++ b/2017.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2017年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:40:51.798636+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:50:27.179978+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2017年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2017.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2017.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -330,7 +333,7 @@
                     <tr>
                         <td style="vertical-align: middle;">99</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Lemao Liu (Tencent)<br> Kehai Chen (ハルビン工業大; NICT)<br> Eiichiro Sumita (NICT)<br>
+                        <td style="vertical-align: middle;"> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Lemao Liu (Tencent)<br> Kehai Chen (NICT; ハルビン工業大)<br> Eiichiro Sumita (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D17/D17-1155">Instance Weighting for Neural Machine Translation Domain Adaptation</a></td>
                     </tr>
@@ -442,7 +445,7 @@
                     <tr>
                         <td style="vertical-align: middle;">46</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Yasuhide Miura (富士ゼロックス; 東工大)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
+                        <td style="vertical-align: middle;"> Yasuhide Miura (東工大; 富士ゼロックス)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P17/P17-1116">Unifying Text, Metadata, and User Network Representations with a Neural Network for Geolocation Prediction</a></td>
                     </tr>
@@ -458,7 +461,7 @@
                     <tr>
                         <td style="vertical-align: middle;">42</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Soichiro Murakami (産総研; 東工大)<br> Akihiko Watanabe (産総研; 東工大)<br> Akira Miyazawa (NII; 総研大; 産総研)<br> Keiichi Goshima (産総研; 東工大)<br> Toshihiko Yanase (日立)<br> Hiroya Takamura (産総研; 東工大)<br> Yusuke Miyao (NII; 総研大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Soichiro Murakami (東工大; 産総研)<br> Akihiko Watanabe (東工大; 産総研)<br> Akira Miyazawa (総研大; 産総研; NII)<br> Keiichi Goshima (東工大; 産総研)<br> Toshihiko Yanase (日立)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (総研大; 産総研; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P17/P17-1126">Learning to Generate Market Comments from Stock Prices</a></td>
                     </tr>
@@ -522,7 +525,7 @@
                     <tr>
                         <td style="vertical-align: middle;">20</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Koji Mineshima (お茶大)<br> Yusuke Miyao (さきがけ; 産総研; 総研大)<br> Daisuke Bekki (お茶大; さきがけ; 産総研)<br>
+                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Koji Mineshima (お茶大)<br> Yusuke Miyao (さきがけ; 総研大; 産総研)<br> Daisuke Bekki (さきがけ; 産総研; お茶大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/E/E17/E17-1067">On-demand Injection of Lexical Knowledge for Recognising Textual Entailment</a></td>
                     </tr>
@@ -594,7 +597,7 @@
                     <tr>
                         <td style="vertical-align: middle;">10</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Yuki Arase (産総研; 阪大)<br> Jun&#39;ichi Tsujii (マンチェスター大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Yuki Arase (阪大; 産総研)<br> Jun&#39;ichi Tsujii (マンチェスター大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D17/D17-1001">Monolingual Phrase Alignment on Parse Forests</a></td>
                     </tr>
@@ -706,7 +709,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Motoki Sato (Manchester)<br> Austin J. Brockmeier (Liverpool)<br> Georgios Kontonatsios (Manchester)<br> Tingting Mu (Manchester)<br> John Y. Goulermas (Liverpool)<br> Jun&#39;ichi Tsujii (産総研; Manchester)<br> Sophia Ananiadou (Manchester)<br>
+                        <td style="vertical-align: middle;"> Motoki Sato (Manchester)<br> Austin J. Brockmeier (Liverpool)<br> Georgios Kontonatsios (Manchester)<br> Tingting Mu (Manchester)<br> John Y. Goulermas (Liverpool)<br> Jun&#39;ichi Tsujii (Manchester; 産総研)<br> Sophia Ananiadou (Manchester)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/E/E17/E17-1093">Distributed Document and Phrase Co-embeddings for Descriptive Clustering</a></td>
                     </tr>
