--- a/2016.html
+++ b/2016.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2016年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:41:04.592975+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:50:31.013195+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2016年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2016.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2016.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -324,7 +327,7 @@
                     <tr>
                         <td style="vertical-align: middle;">179</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Philip Arthur (NAIST)<br> Graham Neubig (CMU; NAIST)<br> Satoshi Nakamura (NAIST)<br>
+                        <td style="vertical-align: middle;"> Philip Arthur (NAIST)<br> Graham Neubig (NAIST; CMU)<br> Satoshi Nakamura (NAIST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D16/D16-1162">Incorporating Discrete Translation Lexicons into Neural Machine Translation</a></td>
                     </tr>
@@ -428,7 +431,7 @@
                     <tr>
                         <td style="vertical-align: middle;">34</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Qiaozi Gao (MSU)<br> Malcolm Doering (MSU; 阪大)<br> Shaohua Yang (MSU)<br> Joyce Chai (MSU)<br>
+                        <td style="vertical-align: middle;"> Qiaozi Gao (MSU)<br> Malcolm Doering (阪大; MSU)<br> Shaohua Yang (MSU)<br> Joyce Chai (MSU)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P16/P16-1171">Physical Causality of Action Verbs in Grounded Language Understanding</a></td>
                     </tr>
@@ -484,7 +487,7 @@
                     <tr>
                         <td style="vertical-align: middle;">27</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Weihua Hu (東大)<br> Jun&#39;ichi Tsujii (産総研; Manchester)<br>
+                        <td style="vertical-align: middle;"> Weihua Hu (東大)<br> Jun&#39;ichi Tsujii (Manchester; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P16/P16-2062">A Latent Concept Topic Model for Robust Topic Inference Using Word Embeddings</a></td>
                     </tr>
@@ -604,7 +607,7 @@
                     <tr>
                         <td style="vertical-align: middle;">14</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Natsuda Laokulrat (産総研)<br> Sang Phan (NII)<br> Noriki Nishida (東大)<br> Raphael Shu (東大)<br> Yo Ehara (産総研)<br> Naoaki Okazaki (産総研; 東北大)<br> Yusuke Miyao (NII; 産総研)<br> Hideki Nakayama (東大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Natsuda Laokulrat (産総研)<br> Sang Phan (NII)<br> Noriki Nishida (東大)<br> Raphael Shu (東大)<br> Yo Ehara (産総研)<br> Naoaki Okazaki (東北大; 産総研)<br> Yusuke Miyao (産総研; NII)<br> Hideki Nakayama (東大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C/C16/C16-1005">Generating Video Description using Sequence-to-sequence Model with Temporal Attention</a></td>
                     </tr>
@@ -764,7 +767,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Yusuke Miyao (総研大; 産総研; NII)<br>
+                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Yusuke Miyao (NII; 総研大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D16/D16-1002">Rule Extraction for Tree-to-Tree Transducers by Cost Minimization</a></td>
                     </tr>
