--- a/2018.html
+++ b/2018.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2018年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:43:18.265516+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:50:32.897012+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2018年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2018.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2018.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -330,7 +333,7 @@
                     <tr>
                         <td style="vertical-align: middle;">128</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Meizhi Ju (産総研; マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (産総研; マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Meizhi Ju (産総研; マンチェスター大)<br> Makoto Miwa (豊田工大; 産総研)<br> Sophia Ananiadou (産総研; マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/N18-1131">A Neural Layered Model for Nested Named Entity Recognition</a></td>
                     </tr>
@@ -346,7 +349,7 @@
                     <tr>
                         <td style="vertical-align: middle;">70</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Mohammad Golam Sohrab (産総研)<br> Makoto Miwa (産総研; 豊田工大)<br>
+                        <td style="vertical-align: middle;"> Mohammad Golam Sohrab (産総研)<br> Makoto Miwa (豊田工大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D18-1309">Deep Exhaustive Model for Nested Named Entity Recognition</a></td>
                     </tr>
@@ -362,7 +365,7 @@
                     <tr>
                         <td style="vertical-align: middle;">65</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Fenia Christopoulou (産総研; マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (産総研; マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Fenia Christopoulou (産総研; マンチェスター大)<br> Makoto Miwa (豊田工大; 産総研)<br> Sophia Ananiadou (産総研; マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P18-2014">A Walk-based Model on Entity Graphs for Relation Extraction</a></td>
                     </tr>
@@ -418,7 +421,7 @@
                     <tr>
                         <td style="vertical-align: middle;">26</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Fengyu Guo (天津市認知計算応用重点実験室; 天津大)<br> Ruifang He (天津市認知計算応用重点実験室; 天津大)<br> Di Jin (天津市認知計算応用重点実験室; 天津大)<br> Jianwu Dang (JAIST; 天津市認知計算応用重点実験室; 天津大)<br> Longbiao Wang (天津市認知計算応用重点実験室; 天津大)<br> Xiangang Li (滴滴出行)<br>
+                        <td style="vertical-align: middle;"> Fengyu Guo (天津市認知計算応用重点実験室; 天津大)<br> Ruifang He (天津市認知計算応用重点実験室; 天津大)<br> Di Jin (天津市認知計算応用重点実験室; 天津大)<br> Jianwu Dang (天津市認知計算応用重点実験室; 天津大; JAIST)<br> Longbiao Wang (天津市認知計算応用重点実験室; 天津大)<br> Xiangang Li (滴滴出行)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1046">Implicit Discourse Relation Recognition using Neural Tensor Network with Interactive Attention and Sparse Learning</a></td>
                     </tr>
@@ -458,7 +461,7 @@
                     <tr>
                         <td style="vertical-align: middle;">24</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Arata Ugawa (東工大)<br> Akihiro Tamura (愛媛大)<br> Takashi Ninomiya (愛媛大)<br> Hiroya Takamura (産総研; 東工大)<br> Manabu Okumura (東工大)<br>
+                        <td style="vertical-align: middle;"> Arata Ugawa (東工大)<br> Akihiro Tamura (愛媛大)<br> Takashi Ninomiya (愛媛大)<br> Hiroya Takamura (東工大; 産総研)<br> Manabu Okumura (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1274">Neural Machine Translation Incorporating Named Entity</a></td>
                     </tr>
@@ -474,7 +477,7 @@
                     <tr>
                         <td style="vertical-align: middle;">23</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Zhisong Zhang (NICT; 上海交通大)<br> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Hai Zhao (上海交通大)<br>
+                        <td style="vertical-align: middle;"> Zhisong Zhang (上海交通大; NICT)<br> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Hai Zhao (上海交通大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D18-1511">Exploring Recombination for Efficient Decoding of Neural Machine Translation</a></td>
                     </tr>
@@ -514,7 +517,7 @@
                     <tr>
                         <td style="vertical-align: middle;">18</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Tanmoy Mukherjee (エジンバラ大)<br> Makoto Yamada (京大; JST; 理研)<br> Timothy Hospedales (エジンバラ大)<br>
+                        <td style="vertical-align: middle;"> Tanmoy Mukherjee (エジンバラ大)<br> Makoto Yamada (京大; 理研; JST)<br> Timothy Hospedales (エジンバラ大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D18-1063">Learning Unsupervised Word Translations Without Adversaries</a></td>
                     </tr>
@@ -578,7 +581,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Chunpeng Ma (NICT; ハルビン工大)<br> Akihiro Tamura (愛媛大)<br> Masao Utiyama (NICT)<br> Tiejun Zhao (ハルビン工大)<br> Eiichiro Sumita (NICT)<br>
+                        <td style="vertical-align: middle;"> Chunpeng Ma (ハルビン工大; NICT)<br> Akihiro Tamura (愛媛大)<br> Masao Utiyama (NICT)<br> Tiejun Zhao (ハルビン工大)<br> Eiichiro Sumita (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P18-1116">Forest-Based Neural Machine Translation</a></td>
                     </tr>
@@ -778,7 +781,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Akira Sasaki (リクルート)<br> Kazuaki Hanawa (東北大)<br> Naoaki Okazaki (産総研; 東工大)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Akira Sasaki (リクルート)<br> Kazuaki Hanawa (東北大)<br> Naoaki Okazaki (東工大; 産総研)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1286">Predicting Stances from Social Media Posts using Factorization Machines</a></td>
                     </tr>
@@ -794,7 +797,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shenhao Jiang (シンガポール国立大)<br> Animesh Prasad (シンガポール国立大)<br> Min-Yen Kan (シンガポール国立大)<br> Kazunari Sugiyama (シンガポール国立大; NII)<br>
+                        <td style="vertical-align: middle;"> Shenhao Jiang (シンガポール国立大)<br> Animesh Prasad (シンガポール国立大)<br> Min-Yen Kan (シンガポール国立大)<br> Kazunari Sugiyama (NII; シンガポール国立大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1022">Identifying Emergent Research Trends by Key Authors and Phrases</a></td>
                     </tr>
@@ -802,7 +805,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryosuke Kohita (IBM; NAIST)<br> Hiroshi Noji (産総研)<br> Yuji Matsumoto (NAIST)<br>
+                        <td style="vertical-align: middle;"> Ryosuke Kohita (NAIST; IBM)<br> Hiroshi Noji (産総研)<br> Yuji Matsumoto (NAIST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1067">Dynamic Feature Selection with Attention in Incremental Parsing</a></td>
                     </tr>
@@ -818,7 +821,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ruifang He (天津市認知計算応用重点実験室; 天津大)<br> Xuefei Zhang (天津市認知計算応用重点実験室; 天津大)<br> Di Jin (天津市認知計算応用重点実験室; 天津大)<br> Longbiao Wang (天津市認知計算応用重点実験室; 天津大)<br> Jianwu Dang (JAIST; 天津市認知計算応用重点実験室; 天津大)<br> Xiangang Li (滴滴出行)<br>
+                        <td style="vertical-align: middle;"> Ruifang He (天津市認知計算応用重点実験室; 天津大)<br> Xuefei Zhang (天津市認知計算応用重点実験室; 天津大)<br> Di Jin (天津市認知計算応用重点実験室; 天津大)<br> Longbiao Wang (天津市認知計算応用重点実験室; 天津大)<br> Jianwu Dang (天津市認知計算応用重点実験室; 天津大; JAIST)<br> Xiangang Li (滴滴出行)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1118">Interaction-Aware Topic Model for Microblog Conversations through Network Embedding and User Attention</a></td>
                     </tr>
@@ -906,7 +909,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryo Nagata (理研; 甲南大)<br> Taisei Sato (甲南大)<br> Hiroya Takamura (産総研; 東工大)<br>
+                        <td style="vertical-align: middle;"> Ryo Nagata (甲南大; 理研)<br> Taisei Sato (甲南大)<br> Hiroya Takamura (東工大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C18-1202">Exploring the Influence of Spelling Errors on Lexical Variation Measures</a></td>
                     </tr>
