deploy: 2c43c1e8aec4f3e48ea7dcaed12295cb7ba2538f

--- a/2019.html
+++ b/2019.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2019年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:41:07.679270+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:50:36.558068+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2019年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2019.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2019.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -328,7 +331,7 @@
                     <tr>
                         <td style="vertical-align: middle;">63</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (東北大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1119">An Empirical Study of Incorporating Pseudo Data into Grammatical Error Correction</a></td>
                     </tr>
@@ -408,7 +411,7 @@
                     <tr>
                         <td style="vertical-align: middle;">32</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (東工大; 産総研)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (産総研; お茶大)<br> Yusuke Miyao (産総研; 東大)<br> Naoaki Okazaki (東工大; 産総研)<br> Hiroya Takamura (東工大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研; 東工大)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (産総研; お茶大)<br> Yusuke Miyao (産総研; 東大)<br> Naoaki Okazaki (産総研; 東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1202">Learning to Select, Track, and Generate for Data-to-Text</a></td>
                     </tr>
@@ -440,7 +443,7 @@
                     <tr>
                         <td style="vertical-align: middle;">26</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Masaru Isonuma (東大)<br> Junichiro Mori (理研; 東大)<br> Ichiro Sakata (東大)<br>
+                        <td style="vertical-align: middle;"> Masaru Isonuma (東大)<br> Junichiro Mori (東大; 理研)<br> Ichiro Sakata (東大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1206">Unsupervised Neural Single-Document Summarization of Reviews via Learning Latent Discourse Structure and its Ranking</a></td>
                     </tr>
@@ -464,7 +467,7 @@
                     <tr>
                         <td style="vertical-align: middle;">24</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Chung-Chi Chen (台湾大)<br> Hen-Hsen Huang (台湾科技部; 政治大)<br> Hiroya Takamura (産総研)<br> Hsin-Hsi Chen (台湾科技部; 台湾大)<br>
+                        <td style="vertical-align: middle;"> Chung-Chi Chen (台湾大)<br> Hen-Hsen Huang (政治大; 台湾科技部)<br> Hiroya Takamura (産総研)<br> Hsin-Hsi Chen (台湾大; 台湾科技部)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1635">Numeracy-600K: Learning Numeracy for Detecting Exaggerated Information in Market Comments</a></td>
                     </tr>
@@ -480,7 +483,7 @@
                     <tr>
                         <td style="vertical-align: middle;">23</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xiaoyu Shen (マックス・プランク情報学研究所; ザールラント大)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
+                        <td style="vertical-align: middle;"> Xiaoyu Shen (ザールラント大; マックス・プランク情報学研究所)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1054">Select and Attend: Towards Controllable Content Selection in Text Generation</a></td>
                     </tr>
@@ -536,7 +539,7 @@
                     <tr>
                         <td style="vertical-align: middle;">19</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xiaoyu Shen (ザールラント大; マックスプランク情報学研究所)<br> Yang Zhao (東大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br>
+                        <td style="vertical-align: middle;"> Xiaoyu Shen (マックスプランク情報学研究所; ザールラント大)<br> Yang Zhao (東大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1390">Improving Latent Alignment in Text Summarization by Generalizing the Pointer Generator</a></td>
                     </tr>
@@ -552,7 +555,7 @@
                     <tr>
                         <td style="vertical-align: middle;">17</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Motoki Sato (PFN)<br> Jun Suzuki (東北大; 理研)<br> Shun Kiyono (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Motoki Sato (PFN)<br> Jun Suzuki (理研; 東北大)<br> Shun Kiyono (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1020">Effective Adversarial Regularization for Neural Machine Translation</a></td>
                     </tr>
@@ -600,7 +603,7 @@
                     <tr>
                         <td style="vertical-align: middle;">14</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (東北大)<br> Hiroki Ouchi (東北大; 理研)<br> Naoya Inoue (東北大; 理研)<br> Paul Reisert (東北大; 理研)<br> Toshinori Miyoshi (日立)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (東北大)<br> Hiroki Ouchi (東北大; 理研)<br> Naoya Inoue (理研; 東北大)<br> Paul Reisert (東北大; 理研)<br> Toshinori Miyoshi (日立)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1464">An Empirical Study of Span Representations in Argumentation Structure Parsing</a></td>
                     </tr>
@@ -608,7 +611,7 @@
                     <tr>
                         <td style="vertical-align: middle;">13</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Mingming Yang (ハルビン工業大)<br> Rui Wang (NICT)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Min Zhang (蘇州大; ハルビン工業大)<br> Tiejun Zhao (ハルビン工業大)<br>
+                        <td style="vertical-align: middle;"> Mingming Yang (ハルビン工業大)<br> Rui Wang (NICT)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Min Zhang (ハルビン工業大; 蘇州大)<br> Tiejun Zhao (ハルビン工業大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1296">Sentence-Level Agreement for Neural Machine Translation</a></td>
                     </tr>
@@ -624,7 +627,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takuma Ebisu (NII; 総研大)<br> Ryutaro Ichise (NII; 産総研; 総研大)<br>
+                        <td style="vertical-align: middle;"> Takuma Ebisu (NII; 総研大)<br> Ryutaro Ichise (産総研; NII; 総研大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1104">Graph Pattern Entity Ranking Model for Knowledge Graph Completion</a></td>
                     </tr>
@@ -640,7 +643,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Taiki Watanabe (理研; 富士通研)<br> Akihiro Tamura (愛媛大; 理研)<br> Takashi Ninomiya (愛媛大; 理研)<br> Takuya Makino (理研; 富士通研)<br> Tomoya Iwakura (理研; 富士通研)<br>
+                        <td style="vertical-align: middle;"> Taiki Watanabe (富士通研; 理研)<br> Akihiro Tamura (愛媛大; 理研)<br> Takashi Ninomiya (愛媛大; 理研)<br> Takuya Makino (富士通研; 理研)<br> Tomoya Iwakura (富士通研; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1648">Multi-Task Learning for Chemical Named Entity Recognition with Chemical Compound Paraphrasing</a></td>
                     </tr>
@@ -696,7 +699,7 @@
                     <tr>
                         <td style="vertical-align: middle;">9</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (理研)<br> Masahiro Kaneko (理研; 首都大)<br> Ryo Nagata (甲南大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (理研)<br> Masahiro Kaneko (首都大; 理研)<br> Ryo Nagata (甲南大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1132">Cross-Corpora Evaluation and Analysis of Grammatical Error Correction Models — Is Single-Corpus Evaluation Enough?</a></td>
                     </tr>
@@ -728,7 +731,7 @@
                     <tr>
                         <td style="vertical-align: middle;">9</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Farjana Sultana Mim (東北大)<br> Naoya Inoue (東北大; 理研)<br> Paul Reisert (東北大; 理研)<br> Hiroki Ouchi (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Farjana Sultana Mim (東北大)<br> Naoya Inoue (理研; 東北大)<br> Paul Reisert (東北大; 理研)<br> Hiroki Ouchi (東北大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-2053">Unsupervised Learning of Discourse-Aware Text Representation for Essay Scoring</a></td>
                     </tr>
@@ -736,7 +739,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shota Sasaki (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Shota Sasaki (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1353">Subword-based Compact Reconstruction of Word Embeddings</a></td>
                     </tr>
@@ -752,7 +755,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kazuma Kadowaki (NICT; 日本総研)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
+                        <td style="vertical-align: middle;"> Kazuma Kadowaki (NICT; 日本総研)<br> Ryu Iida (NICT; NAIST)<br> Kentaro Torisawa (NICT; NAIST)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1590">Event Causality Recognition Exploiting Multiple Annotators’ Judgments and Background Knowledge</a></td>
                     </tr>
@@ -808,7 +811,7 @@
                     <tr>
                         <td style="vertical-align: middle;">6</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (NICT; 日本総研)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br>
+                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (NICT; 日本総研)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NICT; NAIST)<br> Kentaro Torisawa (NICT; NAIST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1414">Open-Domain Why-Question Answering with Adversarial Learning to Encode Answer Texts</a></td>
                     </tr>
@@ -880,7 +883,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Nontawat Charoenphakdee (理研; 東大)<br> Jongyeong Lee (理研; 東大)<br> Yiping Jin (チュラロンコーン大)<br> Dittaya Wanvarie (チュラロンコーン大)<br> Masashi Sugiyama (東大; 理研)<br>
+                        <td style="vertical-align: middle;"> Nontawat Charoenphakdee (東大; 理研)<br> Jongyeong Lee (東大; 理研)<br> Yiping Jin (チュラロンコーン大)<br> Dittaya Wanvarie (チュラロンコーン大)<br> Masashi Sugiyama (東大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1411">Learning Only from Relevant Keywords and Unlabeled Documents</a></td>
                     </tr>
@@ -960,7 +963,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Riko Suzuki (お茶大)<br> Hitomi Yanaka (お茶大; 理研)<br> Masashi Yoshikawa (NAIST)<br> Koji Mineshima (お茶大)<br> Daisuke Bekki (お茶大)<br>
+                        <td style="vertical-align: middle;"> Riko Suzuki (お茶大)<br> Hitomi Yanaka (理研; お茶大)<br> Masashi Yoshikawa (NAIST)<br> Koji Mineshima (お茶大)<br> Daisuke Bekki (お茶大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-2054">Multimodal Logical Inference System for Visual-Textual Entailment</a></td>
                     </tr>
@@ -968,7 +971,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Masato Hagiwara (Octanove Labs)<br> Takumi Ito (東北大; Langsmith)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Masato Hagiwara (Octanove Labs)<br> Takumi Ito (Langsmith; 東北大)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-3039">TEASPN: Framework and Protocol for Integrated Writing Assistance Environments</a></td>
                     </tr>
@@ -1008,7 +1011,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1379">Transductive Learning of Neural Language Models for Syntactic and Semantic Analysis</a></td>
                     </tr>
@@ -1016,7 +1019,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (フィリピン大セブ校; マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (マンチェスター大; フィリピン大セブ校)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1381">A Search-based Neural Model for Biomedical Nested and Overlapping Event Detection</a></td>
                     </tr>
@@ -1040,7 +1043,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Katsuhiko Hayashi (阪大; 理研)<br> Masashi Shimbo (NAIST; 理研)<br>
+                        <td style="vertical-align: middle;"> Katsuhiko Hayashi (理研; 阪大)<br> Masashi Shimbo (NAIST; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1246">A Non-commutative Bilinear Model for Answering Path Queries in Knowledge Graphs</a></td>
                     </tr>
